# csc334-ai

./: README.md  assignment1.py
EMEKA_23CG034065.2303758_EMOTION_DETECTION_WEB_APP/: .gitignore  QUICKSTART.md  README.md  app.py  emotion_model_training.py  link_to_my_web_app.txt  main.py  pyproject.toml  rename_folder.py  requirements.txt  setup_and_test.py
EMEKA_23CG034065.2303758_EMOTION_DETECTION_WEB_APP/static/: style.css
EMEKA_23CG034065.2303758_EMOTION_DETECTION_WEB_APP/templates/: index.html
STUDENT_MAT.12345678/: SUBMISSION_CHECKLIST.md  requirements.txt
week3/: db.py
week5/: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  server.py  train.py
week5/static/css/: style.css
week5/static/js/: app.js
week5/templates/: index.html
